{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Testing",
            "id": "baa7c273-3a11-4d2b-9ef4-d9c637b1f453",
            "actions": [
                {
                    "name": "Trigger1",
                    "type": "Button",
                    "id": "7c4996bc-b5bf-461f-827d-bd9b857896e2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Trigger2",
                    "type": "Button",
                    "id": "779271d7-9cca-4118-ae68-09308889337e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Trigger3",
                    "type": "Button",
                    "id": "db408aa1-a3cf-48f3-829d-90aa5fb9c2ca",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "7bd59786-bf70-4a0b-8964-521aec60c90b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "3bb9dee3-53a0-4a5a-9bb6-8ecf755d50fd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Charge",
                    "type": "Button",
                    "id": "cd2f4d57-a569-4942-ae0e-78f0537f5b7a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "abe14382-14c6-4496-95ba-6167a5c08c5e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Trigger1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8aa3633a-0ee2-4aef-a714-19b578ac8d63",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Trigger2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "df87ad6f-1d05-4085-bae2-22ba7331c384",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Trigger3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8a030e3-8964-4bd6-ad1c-936c95272627",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4315355b-7b47-434f-857c-22505133986a",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "758fbfc8-fc9c-4773-a27d-6807b308a740",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold(duration=10)",
                    "processors": "",
                    "groups": "",
                    "action": "Charge",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player",
            "id": "ee87bd50-0000-453d-b46e-961fd2380bae",
            "actions": [
                {
                    "name": "Forward",
                    "type": "Button",
                    "id": "fecddec7-7251-4dd2-a87c-78c4a618c94c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Backward",
                    "type": "Button",
                    "id": "146bf278-2f77-4aa6-a836-1abbd9ba8008",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "8f6297cb-cb1e-454f-b8c3-0211b9610298",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "6cc54b77-ed6d-412e-9c4a-9872b6af98b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "a26475d6-562e-4424-8df0-53f0d5a7b59c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Charge",
                    "type": "Button",
                    "id": "fcc21921-f655-4c84-81a5-842b60b00c8a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3cb6e8f1-daeb-48c9-b6c5-998d86c307d5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ddc1a01e-ee2f-479f-bfb2-8ee242c0c6c3",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Backward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0e016bc9-16bc-46b1-818e-866c5c691655",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52b0530c-51c8-4a1e-8f77-048ded7177d0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "692cde69-b0ac-4b9f-a846-15b5bc4c2a96",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3dabfbda-113f-4a49-88b6-94c4094f9a23",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold(duration=10)",
                    "processors": "",
                    "groups": "",
                    "action": "Charge",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}